unpackaged/main/default/objects/Interaction/Interaction.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>