unpackaged/main/default/objects/Interaction/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <description>Rich text agenda for the upcoming bi-weekly meeting. Multiple team members can contribute agenda items here before the meeting occurs.</description>
    <label>Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>