unpackaged/main/default/objects/Interaction/fields/Class_Retention_Attrition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Class_Retention_Attrition_Notes__c</fullName>
    <description>Bi-weekly partner meeting agenda item: review of retention percentages; discussion of attrition reasoning and solutions to resolve.</description>
    <label>Class Retention &amp; Attrition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>