unpackaged/main/default/objects/Interaction/fields/Licensing_Percentage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Percentage_Notes__c</fullName>
    <description>Bi-weekly partner meeting agenda item: how many scholars graduate class to go on and become licensed; discussion of how to keep scholar licensure rate at or above 90%.</description>
    <label>Licensing Percentage Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>