unpackaged/main/default/objects/Interaction/fields/New_Class_Requests_Notes__c.field-meta.xml
<CustomField>
    <fullName>New_Class_Requests_Notes__c</fullName>
    <description>Bi-weekly partner meeting agenda item: discussion to add or remove classes to schedule, focused on meeting scholar annual goals.</description>
    <label>New Class Requests Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>