unpackaged/main/default/objects/Interaction/fields/Schedule_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Status_Notes__c</fullName>
    <description>Bi-weekly partner meeting agenda item: review of completed, active, and upcoming classes.</description>
    <label>Schedule Status Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>