unpackaged/main/default/objects/Interaction/fields/Scholar_Employment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scholar_Employment_Notes__c</fullName>
    <description>Bi-weekly partner meeting agenda item: how many licensed scholars go on to be employed as a CNA; discussion of how to keep licensed scholar placement at or above 90%.</description>
    <label>Scholar Employment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>