unpackaged/main/default/objects/Interaction/fields/Scholar_Paperwork_Check_In_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scholar_Paperwork_Check_In_Notes__c</fullName>
    <description>Bi-weekly partner meeting agenda item: Partners are responsible for getting signatures on initial programmatic paperwork (sent via DocuSign); this tracks completion status as discussed.</description>
    <label>Scholar Paperwork Check-In Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>